--- a/JURANI/app/src/main/res/values/strings.xml
+++ b/JURANI/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_dare">Berani</string>
     <string name="action_settings">Settings</string>
     <string name="action_help">Help</string>
-    <string name="action_developer">Pengembang</string>
+    <string name="action_developer">Developer</string>
     <string name="action_reset">Reset</string>
     <string name="action_next">Lanjut</string>
     <string name="action_close">Tutup</string>
