--- a/JURANI/app/src/main/res/values/strings.xml
+++ b/JURANI/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="action_help">Help</string>
     <string name="action_developer">Developer</string>
     <string name="action_reset">Reset</string>
-    <string name="action_next">Lanjut</string>
+    <string name="action_next">Selanjutnya</string>
     <string name="action_close">Tutup</string>
     <string name="action_stop">Berhenti</string>
     <string name="action_repeat">Ulang</string>
